--- a/latex/Experiments.tex
+++ b/latex/Experiments.tex
@@ -130,7 +130,7 @@ The figure show the same trend as Adaboost did. Deeper trees give better results
 \label{fig:StochasticGradBoost}
 \end{figure}
 \\
-Stochastic gradient boosting was mentioned as a small modification of gradient boosting in Section~\ref{sub:Stochastic gradient boosting}. The only difference is that a subset of the training data is drawn (without replacement) at each iteration. \verb+gbm+ refers to this parameter as the \verb+bag.fraction+. In Figure~\ref{fig:StochasticGradBoost}, the test error is plotted for different bootstrap fractions. From the figure is looks like there is little gain in error from introducing randomness. However, for bootstrap fractions down to $0.5$ the performance is not worse. As a smaller dataset requires less computations, there is still some gain in doing stochastic gradient boosting here.
+Stochastic gradient boosting was mentioned as a small modification of Gradient Boosting in Section~\ref{sec:Stochastic gradient boosting}. The only difference is that a subset of the training data is drawn (without replacement) at each iteration. \verb+gbm+ refers to this parameter as the \verb+bag.fraction+. In Figure~\ref{fig:StochasticGradBoost}, the test error is plotted for different bootstrap fractions. From the figure is looks like there is little gain in error from introducing randomness. However, for bootstrap fractions down to $0.5$ the performance is not worse. As a smaller dataset requires less computations, there is still some gain in doing stochastic gradient boosting here.
 
 \section{Bagging and Random Forests}
 \label{sec:BaggandRFSim}
@@ -285,8 +285,29 @@ Random forests or Random forest? \\
 \\
 Find first reference to cross-validation, and write section in appendix.\\
 \\
-
-
+Not famous, but well known.\\
+\\
+Move CART figure forward to start of classification. \\
+\\
+Chapters for different methods. \\
+\\
+Use ''report'' instead of ''project''\\
+\\
+Title: metods for classification using trees.\\
+\\
+Form and from. \\
+\\
+Write intro for all new chapters\\
+\\
+Write random forest in start of chapter\\
+\\
+Change notation in introduction. No particular notation for stochastic variables. Also change stochastic variable in different sections.\\
+\\
+Write that the parameters for the different experiments can be found in the code in appendix.\\
+\\
+Continuous regression trees in gradient boosting section. Make sure the point is correct.\\
+\\
+Remove sections Deletesec and so on.
 
 \section{Questions}
 \label{sec:Questions}
