--- a/latex/Introduction.tex
+++ b/latex/Introduction.tex
@@ -12,7 +12,7 @@ Over time, a variety of approaches have been suggested. Some might give a highly
 \\
 In this project it is assumed that the cost of misclassifying a point is $1$ for all points, and $0$ for correct classification. This is often referred to as $0/1$ classification, or the $0/1$ loss function, 
 \begin{align}
-  L(\hat y, y) = I\left\{ \hat y \neq y \right\}.
+  L(y, \hat y) = I\left\{ \hat y \neq y \right\}.
 \end{align}
 Here $\hat y$ is the prediction given by the classifier. 
 
