--- a/latex/Classification_trees.tex
+++ b/latex/Classification_trees.tex
@@ -1,51 +1,23 @@
 \section{Deletesec}
-In Chapter \todo{ref}, only very basic linear methods for classification were discussed. The log odds were modeled in a linear fashion and a decision boundary was drawn based on this. In this section the framework is completely different. The linearity assumptions are removed along with restrictions on number of classes. 
-First, classification trees will be discussed. They are the foundation of this chapter. Then, their performance will be tweaked through different ensemble methods. This chapter is the main part of the project, and will focus on variations of boosting methods, bagging and random forest. 
-%
-\section{Classification trees}
-\label{sec:Classification trees}
-%%fakesubsection Classification trees
-A classification tree makes local decisions based on a subset of the predictors. This means that the data is split in subsets, that are again split in new subsets (independently of each other) and so on. 
-At the end the subsets are given a class label based on some vote-measure between the data points (usually the majority).
-\todo{Always majority?}
-An example of such a tree can be found in Figure~\ref{fig:cart}.
-The simplicity of the rules makes the method very general, both in terms of nonlinearity and in type of predictors \todo{section about this?}. The method works with continuous, discrete ordered, and categorical predictors. Another benefit is that the resulting tree is highly interpretable, as the splits are easy to visualize. Prediction is done by following splits down to the decision node, giving the predicted class. An example of such a tree can be found in Figure~\ref{fig:cartTree1}.\\
-\\
-Unlike the linear classifiers, the decision boundaries for trees can take many different forms. Everything from a linear boundary with two end nodes, to a highly complex boundary with the same amount of end nodes as data points, is possible. In this regard, the terms \textit{overfitting} and \textit{underfitting} need to be introduced. 
+In the previous chapter only very basic linear methods for classification were discussed. The log odds were modeled in a linear fashion and a decision boundary was drawn based on this. Now the framework changes completely. The linearity assumptions are removed along with restrictions on number of classes. 
+In this chapter classification trees will be discussed. They are the foundation of this report. Later, attempts to enhancing their performance will be made through different ensemble methods. 
 
-An underfitted model is too simple to capture the complexity of the data. On the contrary, an overfitted model is fitted to close to the training data and therefore describes the random noise of the training data rather than the true underlying model.  Obviously, a full tree, i.e. only one training point in each end node, will be overfitted, while a too small thee will be underfitted. 
-
-\todo{Should regression be presented like this?}
-In the regression framework, under squared error loss, it can be shown that a small tree is highly biased with low variance, while a larger tree is highly unstable (high variance), but with smaller bias. 
-In appendix~\ref{sub:Bias-variance tradeoff}, it is shown how the $\mathrm{EPE}$, introduced in \ref{sub:LDA}, has an additive relationship with the classifier's bias and variance. Therefore this \textit{bias-variance tradeoff} is important to consider when creating the prediction method. 
-
-For classification the same argument does not quite hold, but similar definitions for bias and variance has been proposed for $0/1$ loss in the literature. Among the most famous are \cite{kong1995error}, \cite{kohavi1996bias}, \cite{breiman1996bias} and \cite{Friedman1997bias}. While they have all provided useful insight to classification problems, non of them present a framework as simple and satisfactory as for regression. In this project, when referring to bias or variance of classifiers, it is more in a heuristic way. Loosely, bias measures the systematic error of a classifier, i.e. the average error over different training sets. Variance measures the additional error do to variations in the classifier between training sets. 
-\\
-\\
-There are proposed different algorithms for building classification trees. They all try to find the optimal balance between the bias and variance, in terms of how the tree is grown, and how large the resulting tree will be.
-Some of the more common methods are ID3 by \cite{ID3}, C4.5 by \cite{C4.5} and its successor See5/C5.0, CHAID by \cite{CHAID} and CART by \cite{breiman}.
-In this project only CART will be covered, as this might be the most famous of them.
-\\ \colorbox{yellow}{Give references to other tree methods than CART.}
-\\\url{http://stackoverflow.com/questions/9979461/different-decision-tree-algorithms-with-comparison-of-complexity-or-performance}
-%
-\subsection{CART}
-\label{sub:CART}
+\section{The tree}
+\label{sec:Tree}
 <<cartSim, echo=FALSE>>=
 # Simple simulation to get nice areas and tree
 source("../code/cartSim.R")
 @
-\colorbox{yellow}{In this section use both \cite{bishop} , \cite{modstat} and \cite{breiman}.}\\
-\url{http://edoc.hu-berlin.de/master/timofeev-roman-2004-12-20/PDF/timofeev.pdf}\\\\
-%
-The Classification and Regression Trees algorithm split at only \textit{one} variable at the time, i.e. no combinations of features are used in the splits. This means that the domain is split into rectangles, aligned with the axes. 
-Also, each split in CART divide the domain in \textit{two} parts, often referred to as binary splitting. Thus, the splits are done in the simplest way possible, but has still shown good performance. CART, as the name implies, can be used both for classification and regression, but only its abilities as a classifier will be considered in this section. The regression framework will be briefly introduced in \ref{sub:Gradient boosting}.
 
-In Figure~\ref{fig:cart} a toy example was simulated to illustrate how the CART algorithm works. The tree is made by the R function \verb+rpart+ \cite{rpart}. To make it easy to visualize, only two predictors were used. 
-In Figure~\ref{fig:cartAreas1} the domains created by the splits are displayed. Each vertical and horizontal line shows a split. It is clear that the data is not linear, and the figure shows how easy the algorithm handles this.
-For more than two predictors it is hard to visualize the splits on the actual domain, so a tree view is used instead.
- In Figure~\ref{fig:cartTree1} the tree from the toy example is displayed. It is clear that it easily generalize to more than two dimensions. \\
-%
-\begin{figure}[h!]
+A classification tree makes local decisions based on a subset of the predictors. This means that the data is split in subsets, that are again split in new subsets (independently of each other) and so on. 
+At the end the subsets are given a class label based on some vote-measure between the data points, usually the majority.
+An example of such a tree can be found in Figure~\ref{fig:cart}.
+
+The simplicity of the rules make trees very general, both in terms of decision boundaries and in type of predictors. The methods usually work with continuous, discrete ordered, and categorical features. However, only continuous features will be covered in this report.  
+
+The splits for a tree are easy to visualize, which make trees highly interpretable. Prediction is done by following splits down to the decision node, giving the predicted class. An example of such a tree can be found in Figure~\ref{fig:cartTree1}.
+\\
+\begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.48\textwidth}
     \includegraphics[width=\textwidth]{./figures/cartAreas1.pdf}
@@ -63,10 +35,38 @@ For more than two predictors it is hard to visualize the splits on the actual do
   \caption{CART run on simulated data in two dimensions. }
   \label{fig:cart}
 \end{figure}
+\\
+Unlike linear classifiers, the decision boundaries for trees can take many different forms. Everything from a linear boundary with two end nodes, to a highly complex boundary with the same amount of end nodes as data points, is possible. In this regard, the terms \textit{overfitting} and \textit{underfitting} need to be introduced. 
+
+An underfitted model is too simple to capture the complexity of the data. On the contrary, an overfitted model is fitted to close to the training data and as a result describes the random noise of the training data rather than the true underlying model.  Obviously, a full tree, i.e. only one training point in each end node, will be overfitted, while a too small thee will be underfitted. 
+
+In the regression framework, under squared error loss, it can be shown that a small tree is highly biased with low variance, while a larger tree is highly unstable (high variance), but with smaller bias. 
+In appendix~\ref{sub:Bias-variance tradeoff}, it is shown how the $\mathrm{EPE}$, introduced in \ref{sub:LDA}, has an additive relationship with the classifier's bias and variance. As a result, the \textit{bias-variance tradeoff} should be considered when creating the prediction method. 
+
+For classification the same argument does not quite hold, but similar definitions for bias and variance has been proposed for $0/1$ loss in the literature. Some of the most well known methods include \cite{kong1995error}, \cite{kohavi1996bias}, \cite{breiman1996bias} and \cite{Friedman1997bias}. While they have all provided useful insight to classification problems, non of them present a framework as simple and satisfactory as for regression. In this project, when referring to bias or variance of classifiers, it is more in a heuristic way. Loosely, bias measures the systematic error of a classifier, i.e. the average error over different training sets. Variance measures the additional error do to variations in the classifier between training sets. 
+\\
+\\
+There are proposed different algorithms for building classification trees. They all try to find the optimal balance between bias and variance. This is done in terms of how the tree is grown, but more importantly, how to control the size of the tree. 
+Some of the more common methods include ID3 by \cite{ID3}, C4.5 by \cite{C4.5} and its successor See5/C5.0, CHAID by \cite{CHAID} and CART by \cite{breiman}.
+In this project only CART will be covered, as it is one of the more widely used.
 %
-\subsubsection{Growing a tree}
+\section{CART}
+\label{sec:CART}
+%
+The Classification and Regression Trees algorithm split at only \textit{one} variable at a time, i.e. no combinations of features are used in the splits. This means that the domain is split into rectangles, aligned with the axes. 
+Also, each split in CART divide the domain in \textit{two} parts, often referred to as binary splitting. Thus, the splits are done in the simplest way possible. Nevertheless, CART has shown decent performance. 
+
+CART, as the name implies, can be used both for classification and regression, but only its abilities as a classifier will be considered in this section. The regression framework will be briefly introduced in \ref{sec:Gradient boosting}.
+\\
+\\
+In Figure~\ref{fig:cart} a toy example was simulated to illustrate how the CART algorithm works. The tree is made by the R function \verb+rpart+ by \cite{rpart}. To make it easy to visualize, only two predictors were used. 
+In Figure~\ref{fig:cartAreas1} the domains resulting by the splits are displayed. Each vertical and horizontal line shows a split. It is clear that the data is not linear, and the figure shows how the algorithm is capable of handling such a complex decision boundary.
+For more than two predictors it is hard to visualize the splits on the actual domain, so a tree view is used instead.
+ In Figure~\ref{fig:cartTree1} the tree from the toy example is displayed. It is clear that it easily generalizes to more than two dimensions. \\
+%
+\subsection{Growing a tree}
 \label{sub:Growing a tree}
-The intuition behind CART is pretty straight forward. What is not so clear is how the tree is grown and how large it tree should be. As it is too computationally expensive to create an optimal tree based on the training data, greedy algorithms for splitting in a sequential matter are used instead. A split needs to to be based on a criterion and one of the more common is the \textit{Gini index}. For $K$ classes it is defined as,
+The intuition behind CART is quite simple. Next, the splitting decisions need to be investigated. As it is too computationally expensive to create an optimal tree based on the training data, greedy algorithms for splitting in a sequential matter are used instead. A split needs to to be based on a criterion and one of the more common is the \textit{Gini index}. For $K$ classes it is defined as,
 \begin{align}
   Q_m(T) &= \sum^{K}_{k=1} \hat{p}_{mk} (1 - \hat{p}_{mk}),  \\ 
   \label{eq:pmk} 
@@ -98,7 +98,7 @@ and misclassification error as,
 \end{align}
 Unlike the Gini index and the deviance, the misclassification error is not differentiable. This makes it hard to use for numerical optimization, so Gini or deviance are usually the preferred choice. 
 
-\subsubsection{Pruning}
+\subsection{Pruning}
 \label{sub:Pruning}
 
 When growing a tree it is important to consider the tree size. The simplest way to restrict the tree size would be to stop when the total node impurity change less than some threshold. This does not take into account that a seemingly worthless split might cause an excellent successive split. 
